--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="background-image: ">
+<div class="container">
 
   <h2>Create data</h2>
   <form class="form-horizontal">
